fix data in the andoid app set. Fix spacing in the header of the case study details

--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -67,5 +67,5 @@
 
 /* SOURCE CODE BUTTON IN CASE STUDY DETAILS HEADER */
 .sourcecode_btn {
-  margin: 1rem 0 1rem 0;
+  margin: 1.75rem 0 1rem 0;
 }
